==> hathach/tinyusb/src/portable/telink/dcd_tlsr.c <==
#include "tusb_option.h"
#include "device/dcd.h"
#include "driver.h"
#define EP_MAX 9
#define XFER_CTL_BASE(_ep, _dir) &xfer_status[_ep][_dir]

void dcd_init(uint8_t rhport)
{
    (void)rhport;

    /* enable global interrupt. */
#if (MCU_CORE_B91 || MCU_CORE_B92)
    core_interrupt_enable();
#elif (MCU_CORE_B80 || MCU_CORE_B85 || MCU_CORE_B87)
    irq_enable();
#endif

    usbhw_enable_manual_interrupt(FLD_CTRL_EP_AUTO_STD | FLD_CTRL_EP_AUTO_DESC | FLD_CTRL_EP_AUTO_CFG);

    usbhw_set_irq_mask(USB_IRQ_RESET_MASK | USB_IRQ_SUSPEND_MASK);

    usb_set_pin_en();
}

void dcd_int_enable(uint8_t rhport)
{
    (void)rhport;

#if (MCU_CORE_B91 || MCU_CORE_B92)
    plic_interrupt_enable(IRQ_USB_CTRL_EP_SETUP);
    plic_interrupt_enable(IRQ_USB_CTRL_EP_DATA);
    plic_interrupt_enable(IRQ_USB_CTRL_EP_STATUS);
    plic_interrupt_enable(IRQ_USB_CTRL_EP_SETINF);
    plic_interrupt_enable(IRQ_USB_RESET);
    plic_interrupt_enable(IRQ_USB_ENDPOINT);
#elif (MCU_CORE_B80 || MCU_CORE_B85 || MCU_CORE_B87)
    // TODO
#endif
}

void dcd_int_disable(uint8_t rhport)
{
    (void)rhport;

#if (MCU_CORE_B91 || MCU_CORE_B92)
    plic_interrupt_disable(IRQ_USB_CTRL_EP_SETUP);
    plic_interrupt_disable(IRQ_USB_CTRL_EP_DATA);
    plic_interrupt_disable(IRQ_USB_CTRL_EP_STATUS);
    plic_interrupt_disable(IRQ_USB_CTRL_EP_SETINF);
    plic_interrupt_disable(IRQ_USB_RESET);
    plic_interrupt_disable(IRQ_USB_ENDPOINT);
#elif (MCU_CORE_B80 || MCU_CORE_B85 || MCU_CORE_B87)
    // TODO
#endif
}
